--- a/cssa-mini/index.html
+++ b/cssa-mini/index.html
@@ -20,4 +20,10 @@
 		             STXihei, "华文细黑", 
 		             serif;
 	}
+	#text{
+		font-family: Georgia, "Times New Roman",
+		             "Microsoft YaHei", "微软雅黑", 
+		             STXihei, "华文细黑", 
+		             serif;
+	}
 </style>
