--- a/cssa-mini/index.html
+++ b/cssa-mini/index.html
@@ -11,19 +11,6 @@
     <div id="app"><!--app-html--></div>
     <script type="module" src="/main.js"></script>
   </body>
-</html>\
+</html>
 
-<style>
-	#span{
-		font-family: Georgia, "Times New Roman", 
-		             "Microsoft YaHei", "微软雅黑", 
-		             STXihei, "华文细黑", 
-		             serif;
-	}
-	#text{
-		font-family: Georgia, "Times New Roman",
-		             "Microsoft YaHei", "微软雅黑", 
-		             STXihei, "华文细黑", 
-		             serif;
-	}
-</style>
+
